--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
   "redis",
   "pygame",
   "aiohttp",
-  "pymupdf",
+  "unstructured-client",
   "wtpsplit",
   "torch",
   "gradio",
